repos/iiif-storage/asset/css/iiif-storage.css
.iiif-view-annotation-studio {
    display: flex;
    flex-wrap: wrap;
    background: #fff;
}
.iiif-view-annotation-studio__viewer {
    flex: 1;
}
.iiif-view-annotation-studio__viewer img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    margin-top: 0;
    object-position: 50% 0;
    filter: blur(10px);
}

.iiif-view-annotation-studio__drafts {
    width: 100%;
    flex-basis: 100%;
    background: #fff;
    padding: 20px;
    font-size: 14px;
    line-height: 1.1;
}
.iiif-view-annotation-studio__resource-editor {
    width: 350px;
    flex-basis: 350px;
    background: #fff;
    padding: 20px;
    font-size: 14px;
    line-height: 1.25;
    position: sticky;
    margin-bottom: auto;
    margin-left: 10px;
    top: 10px;
    box-shadow: 0 3px 20px 0 rgba(0,0,0,.2);
    border-radius: 3px;
}

.iiif-view-attribution {
    color: #444;
    font-size: 12px;
    line-height: 18px;
    margin-bottom: 20px;
}

.canvas-navigation {
    width: 100%;
    margin-bottom: 20px;
}
.canvas-navigation:after {
    clear: both;
    content: '';
    display: table;
}
.canvas-navigation__next,
.canvas-navigation__previous {
    background: #B9DAEB;
    border: 1px solid #80B6D2;
    padding: 5px 10px;
    font-size: 14px;
    color: #fff;
}

.canvas-navigation__next span,
.canvas-navigation__previous span {
    margin: 0 5px;
}

.canvas-navigation__next {
    float: right;
}
.canvas-navigation__previous {
    float: left;
}

.iiif-view-manifest-list {
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    align-items: stretch;
}
.iiif-view-manifest-list * {
    box-sizing: border-box;
    max-width: 100%;
    height: auto;
}
.iiif-view-manifest-list__canvas-image .c-image {
    margin: auto;
}
.iiif-view-manifest-list__canvas {
    width: 25%;
    flex-basis: 25%;
    padding: 10px;
    margin: 20px 0;
    text-align: center;
}
.iiif-view-manifest-list__canvas-image {
    padding: 30px;
    background: #000;
    display: flex;
    align-items: center;
    height: 100%;
}

.canvas-actions {
    margin-top: 40px;
    font-size: 16px;
}
.canvas-actions ul {
    margin: 0;
    padding: 0;
    list-style: none;
}
.canvas-actions span {
    margin: 0 10px;
}
.canvas-actions li {
    margin-bottom: 10px;
}
.canvas-actions li a {
    color: #2b91af;
}
.canvas-actions li a:hover {
    color: #2458af;
}
.canvas-actions li span {
    width: 20px;
}
.canvas-actions li a span,
.canvas-actions li a span:hover{
    color: #000;
}

.c-save-for-later input[name="bookmark"] {
    display: inline;
    background: none;
    padding: 0;
    margin: 0;
    font-size: inherit;
    line-height: inherit;
    color: #2b91af;
    transform: translateX(-4px);
}
.c-save-for-later input[name="bookmark"]:hover {
    color: #2458af;
}
.c-save-for-later form {
    display: inline;
}

.iiif-view-playlist-grid {
    display: flex;
    flex-wrap: wrap;
    height: 250px;
    justify-content: space-around;
    border-radius: 3px;
    overflow: hidden;
    box-shadow: inset 0px 0px 0px 1px rgba(0,0,0,.3);
    /*border: 1px solid #aaa;*/
}
.iiif-view-playlist-grid__image {
    flex-basis: 50%;
    height: 50%;
    width: 50%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.iiif-view-manifest-grid {
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    justify-content: space-around;
    margin-left: -15px;
    margin-right: -15px;
}
.iiif-view-manifest-grid__manifest {
    font-size: 14px;
    line-height: 18px;
    padding: 0 15px 30px 15px;
    width: 25%;
    flex-basis: 25%;
}

.iiif-view-manifest-grid__manifest-label {
    display: block;
    font-weight: bold;
    max-width: 250px;
    text-overflow: ellipsis;
    overflow: hidden;
}
#media-metadata .media-render {
    background: #fff;
    padding: 35px;
    margin: 20px 20px 40px 20px;
    border: 1px solid #ccc;
    position: relative;
    border-radius: 3px;
    box-shadow: 0px 3px 20px 0px rgba(0,0,0,.2);
}
#media-metadata .media-render:before {
    position: absolute;
    content: 'preview';
    top: -1px;
    right: -1px;
    color: #A61D1F;
    background: #eee;
    border: 1px solid #ccc;
    border-radius: 0px 3px 0px 3px;
    font-size: 10px;
    text-transform: uppercase;
    padding: 0 10px;
    font-weight: bold;

}

.iiif-view-metadata {

}

.iiif-view-metadata dt {
    font-weight: 600;
}
.iiif-view-metadata dd ~ dt {
    margin-top: 20px;
}


.iiif-storage-pagination {

}
.iiif-storage-pagination__section {
    display: block;
    margin: 8px;
    padding: 16px;
    font-size: 18px;
    max-width: 300px;
    border: 1px solid #999;
}

.iiif-storage-manifest-snippet {
    margin: 40px 0;
    width: 100%;
}

.iiif-storage-manifest-snippet__link {
    color: inherit;
    text-decoration: none;
}

.iiif-storage-manifest-snippet__link:hover {
    text-decoration: underline;
}

.iiif-storage-manifest-snippet__thumbnail-count {
    margin-bottom: 10px
}

.iiif-storage-manifest-snippet__thumbnail-list {
    display: flex;
    flex-wrap: nowrap;
    overflow: hidden;
    align-items: center;
    height: 200px;
    padding: 3px;
}

.iiif-storage-manifest-snippet__thumbnail:hover {
    transform: scale(1.05);
}

.iiif-storage-manifest-snippet__thumbnail {
    height: 100%;
    margin-right: 10px;
    transition: transform .4s;
}

.iiif-storage-manifest-snippet__thumbnail img {
    height: 100%;
}

.iiif-storage-manifest-snippet__button {
    margin: 10px 0;
    text-decoration: none;
    background: #333;
    color: #fff;
    padding: 6px 12px;
    display: inline-block;
}
.c-contributors {
    list-style: none;
    position: relative;
    padding: 0;
    margin: 0 0 40px;
}

.c-contributors li {
    border-bottom: 1px solid #f2f3f4;
    padding: 15px 0;
    position: relative;
}

.c-contributors li:last-of-type {
    border: 0;
}

.c-contributors li:nth-of-type(even) {
    background-color: #fafbfb;
}

.c-contributors__icon {
    color: #c1c7ca;
    left: 0;
    position: relative;
    top: 0;
}

@media (max-width: 768px) {
    .c-contributors {
        padding: 5px 0;
    }
}

.c-button {
    background-color: #eaeced;
    border: 0;
    border-radius: 0;
    color: #484848;
    display: inline-block;
    padding: 10px;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    width: auto;
}

.c-button:hover {
    background-color: #dce0e1;
    color: #fff;
}

.c-button--block {
    display: block;
    width: 100%;
}

.c-button--lg {
    font-size: 20px;
    font-size: 2rem;
    padding: 15px 50px;
}

.c-button--primary {
    background-color: #333;
    color: #fff;
}

.c-button--primary:hover {
    background-color: #333;
    color: #fff;
}

.c-button--secondary {
    background-color: #4a4a49;
    color: #fff;
}

.c-button--secondary:hover {
    background-color: #3d3d3c;
    color: #fff;
}

.c-button button,
.c-button input[type="submit"],
.c-button input[type="button"] {
    background: none;
    border: 0;
}

.c-button--plain {
    background-color: transparent;
    color: #484848;
}

.c-button--link {
    background-color: transparent;
    color: #333;
}

.c-image {
    position: relative;;
}
.c-image__status--started:after {
    position: absolute;
    bottom: -2px;
    border: 2px solid #000;
    right: -7px;
    width: 14px;
    height: 14px;
    content: '';
    background: dodgerblue;
    border-radius: 50%;
}

.info-panel {
    background: palegoldenrod;
    color: #333;
    padding: 5px;
    margin: 10px -5px;
}

